tests/snapshots/run_wpt_conformance__litert_layerNormalization_float16_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float16 2D tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: LayerNormalization { input: 0, options: Some(MLLayerNormalizationOptions { label: "", scale: None, bias: None, axes: None, epsilon: 1e-5 }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f16[4, 6];
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=null, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { layerNormOutput; }
}
