tests/snapshots/run_wpt_conformance__litert_layerNormalization_float16_4D_tensor_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float16 4D tensor all options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: LayerNormalization { input: 1, options: Some(MLLayerNormalizationOptions { label: "", scale: Some(2), bias: Some(0), axes: Some([0, 3, 1]), epsilon: 0.0001 }), outputs: [3] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f16[2, 1, 4, 3];
  }

  consts {
    operand_0: f16[2, 3, 1] @bytes([91, 200, 165, 199, 240, 68, 96, 192, 17, 196, 214, 198]);
    operand_2: f16[2, 3, 1] @bytes([183, 71, 243, 62, 146, 72, 194, 69, 164, 193, 126, 185]);
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=[0, 3, 1], bias=0, epsilon=0.0001, label="", scale=2);
  }

  outputs { layerNormOutput; }
}
